--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -81,6 +81,14 @@
                     android:textColorHint="@color/black" />
             </com.google.android.material.textfield.TextInputLayout>
 
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/olvide_mi_contrasena"
+                android:layout_gravity="center"
+                android:textSize="16sp"
+                android:textColor="@color/black"/>
+
             <Button
                 android:id="@+id/buttonIngreso"
                 android:layout_width="match_parent"
