--- a/app/src/main/res/layout/activity_garaje.xml
+++ b/app/src/main/res/layout/activity_garaje.xml
@@ -8,6 +8,7 @@
 
 
     <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/constraintLayout"
         android:layout_width="419dp"
         android:layout_height="200dp"
         android:background="@drawable/rounded_corner_bottom_left"
@@ -26,9 +27,9 @@
             android:text="KTM 125 Duke"
             android:textColor="@color/white"
             android:textSize="30dp"
+            android:textStyle="bold"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            android:textStyle="bold">
+            app:layout_constraintTop_toTopOf="parent">
 
 
         </TextView>
@@ -59,14 +60,69 @@
     </androidx.constraintlayout.widget.ConstraintLayout>
 
     <ImageView
-        android:layout_width="336dp"
-        android:layout_height="440dp"
-        android:layout_marginTop="88dp"
+        android:id="@+id/imageView"
+        android:layout_width="330dp"
+        android:layout_height="399dp"
+        android:layout_marginTop="80dp"
+        android:layout_marginEnd="136dp"
         android:src="@drawable/moto"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.052"
-        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
+    <androidx.cardview.widget.CardView
+        android:id="@+id/cardView"
+        android:layout_width="125dp"
+        android:layout_height="101dp"
+        android:layout_marginStart="16dp"
+        android:backgroundTint="@color/yellow"
+        app:cardCornerRadius="20dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/imageView">
+
+    </androidx.cardview.widget.CardView>
+
+    <androidx.cardview.widget.CardView
+        android:layout_width="120dp"
+        android:layout_height="103dp"
+        android:backgroundTint="@color/yellow"
+        app:cardCornerRadius="20dp"
+        tools:layout_editor_absoluteX="309dp"
+        tools:layout_editor_absoluteY="479dp">
+
+    </androidx.cardview.widget.CardView>
+
+    <androidx.cardview.widget.CardView
+        android:id="@+id/cardView2"
+        android:layout_width="129dp"
+        android:layout_height="102dp"
+        android:layout_marginStart="20dp"
+        android:backgroundTint="@color/yellow"
+        app:cardCornerRadius="20dp"
+        app:layout_constraintStart_toEndOf="@+id/cardView"
+        app:layout_constraintTop_toBottomOf="@+id/imageView">
+
+    </androidx.cardview.widget.CardView>
+
+
+    <Button
+        android:layout_width="85dp"
+        android:layout_height="85dp"
+        android:backgroundTint="@color/white"
+        android:text="<"
+        android:textColor="@color/black"
+        android:textSize="40dp"
+        android:textStyle="bold"
+        tools:layout_editor_absoluteX="16dp"
+        tools:layout_editor_absoluteY="601dp"
+        />
+
+    <Button
+        android:layout_width="202dp"
+        android:layout_height="79dp"
+        android:text="Cambiar Moto"
+        android:textSize="20dp"
+        android:textStyle="bold"
+        tools:layout_editor_absoluteX="184dp"
+        tools:layout_editor_absoluteY="601dp" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
